# ScatteredStackMachine

./: CMakeLists.txt  core.asm  get_size.sh  run.sh
.github/workflows/: test.yml
tests/: Makefile  my_tests.c
